--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <!--<color name="colorButton">#fafafa</color>-->
     <color name="colorButton">#afb42b</color>
+    <!--<color name="colorBackground">#00e5ff</color>-->
     <color name="colorBackground">#FF00897B</color>
     <color name="textColor">#ffffff</color>
 </resources>
