--- a/app/src/main/res/anim/translate.xml
+++ b/app/src/main/res/anim/translate.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
+<set xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="1000"
-    android:fromXDelta="0"
-    android:fromYDelta="0"
-    android:toXDelta="300"
-    android:toYDelta="0">
-
-
-</translate>
+    android:interpolator="@android:anim/accelerate_interpolator">
+    <!--<translate-->
+        <!--android:fromXDelta="0"-->
+        <!--android:fromYDelta="0"-->
+        <!--android:toXDelta="300"-->
+        <!--android:toYDelta="0">-->
+    <!--</translate>-->
+</set>
