--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,10 +8,7 @@
     android:background="@color/colorBackground"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="32dp"
     tools:context="com.rodionov.mishka.flagmemorine.activity.StartActivity">
 
     <LinearLayout
@@ -310,25 +307,12 @@
                 android:textColor="@color/textColor"
                 android:textSize="18sp" />
 
-            <ImageView
-                android:id="@+id/testImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                app:srcCompat="@android:drawable/btn_star" />
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/testImage2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_play_arrow_white_18dp" />
             </LinearLayout>
 
         </LinearLayout>
