--- a/app/src/main/res/layout/learn_item_cardview.xml
+++ b/app/src/main/res/layout/learn_item_cardview.xml
@@ -15,115 +15,139 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorBackground"
-            android:orientation="horizontal"
-            android:padding="5dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/countryName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBackground"
+                android:fontFamily="@font/all_text"
+                android:text="TextView"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:background="@color/colorBackground"
+                android:orientation="horizontal"
+                android:padding="5dp">
 
-                <ImageView
-                    android:id="@+id/person_photo"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/learnCountryImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="16dp"
+                        android:layout_weight="2"
+                        app:srcCompat="@drawable/unknown" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="16dp"
-                    android:layout_weight="2"
-                    app:srcCompat="@drawable/unknown" />
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/capitalImage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="2"
+                            app:srcCompat="@drawable/ic_my_location_white_36dp" />
+
+                        <TextView
+                            android:id="@+id/capital"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/all_text"
+                            android:gravity="center|start"
+                            android:paddingStart="10dp"
+                            android:text="test"
+                            android:textColor="@color/textColor"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/populationImage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="2"
+                            app:srcCompat="@drawable/ic_people_white_36dp" />
+
+                        <TextView
+                            android:id="@+id/population"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="start"
+                            android:layout_weight="1"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/all_text"
+                            android:gravity="center|start"
+                            android:paddingStart="10dp"
+                            android:singleLine="true"
+                            android:text="TextView"
+                            android:textColor="@color/textColor"
+                            android:textSize="20sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/squareImage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="2"
+                            app:srcCompat="@drawable/ic_code_white_36dp" />
+
+                        <TextView
+                            android:id="@+id/square"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="start"
+                            android:layout_weight="1"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/all_text"
+                            android:gravity="center|start"
+                            android:paddingStart="10dp"
+                            android:singleLine="true"
+                            android:text="TextView"
+                            android:textColor="@color/textColor"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/capitalImage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/unknown" />
-
-                    <TextView
-                        android:id="@+id/capital"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/all_text"
-                        android:gravity="center"
-                        android:text="test"
-                        android:textColor="@color/textColor" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/populationImage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/unknown" />
-
-                    <TextView
-                        android:id="@+id/population"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="start"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:fontFamily="@font/all_text"
-                        android:gravity="center"
-                        android:singleLine="true"
-                        android:text="TextView"
-                        android:textColor="@color/textColor" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/squareImage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/unknown" />
-
-                    <TextView
-                        android:id="@+id/square"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="start"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:fontFamily="@font/all_text"
-                        android:gravity="center"
-                        android:singleLine="true"
-                        android:text="TextView"
-                        android:textColor="@color/textColor" />
-                </LinearLayout>
-
-            </LinearLayout>
-
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
